this is spinner android studio project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">spinner</string>
     <string name="shubham">shubham</string>
+    <string name="spinner_example">Spinner Example</string>
 </resources>
